--- a/projects/ngx-grid-core/package.json
+++ b/projects/ngx-grid-core/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ngx-grid-core",
-  "version": "0.0.1",
+  "name": "@blueshiftone/ngx-grid-core",
+  "version": "0.0.2",
   "peerDependencies": {
     "@angular/common": "^13.0.0",
     "@angular/core": "^13.0.0",
@@ -10,9 +10,11 @@
     "prosemirror-inputrules": "^1.1.3",
     "prosemirror-keymap": "^1.1.5",
     "prosemirror-model": "^1.15.0",
+    "@types/prosemirror-model": "^1.16.1",
     "prosemirror-schema-basic": "^1.1.2",
     "prosemirror-schema-list": "^1.1.6",
     "prosemirror-state": "^1.3.4",
+    "@types/prosemirror-state": "^1.2.8",
     "prosemirror-view": "^1.21.0",
     "uuid": "^8.3.2"
   },
@@ -24,10 +26,8 @@
     "@types/prosemirror-history": "^1.0.3",
     "@types/prosemirror-inputrules": "^1.0.4",
     "@types/prosemirror-keymap": "^1.0.4",
-    "@types/prosemirror-model": "^1.16.1",
     "@types/prosemirror-schema-basic": "^1.0.2",
     "@types/prosemirror-schema-list": "^1.0.3",
-    "@types/prosemirror-state": "^1.2.8",
     "@types/uuid": "^8.3.4"
   }
 }
