--- a/projects/ngx-grid-toolbar/package.json
+++ b/projects/ngx-grid-toolbar/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ngx-grid-toolbar",
+  "name": "@blueshiftone/ngx-grid-toolbar",
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^13.0.0",
