--- a/projects/ngx-grid-toolbar/package.json
+++ b/projects/ngx-grid-toolbar/package.json
@@ -1,6 +1,12 @@
 {
   "name": "@blueshiftone/ngx-grid-toolbar",
-  "version": "0.0.2",
+  "version": "0.0.3",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/blueshiftone/ngx-grid",
+    "directory": "projects/ngx-grid-toolbar"
+  },
+  "license" : "MIT",
   "peerDependencies": {
     "@angular/common": "^13.0.0",
     "@angular/core": "^13.0.0",
