--- a/package.json
+++ b/package.json
@@ -56,6 +56,6 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "ng-packagr": "^14.0.2",
-    "typescript": "4.8"
+    "typescript": "^5.0.2"
   }
 }
