--- a/projects/ngx-grid-core/package.json
+++ b/projects/ngx-grid-core/package.json
@@ -1,18 +1,21 @@
 {
   "name": "@blueshiftone/ngx-grid-core",
-  "version": "0.18.5",
+  "version": "0.19.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/blueshiftone/ngx-grid",
     "directory": "projects/ngx-grid-core"
   },
+  "scripts": {
+    "depcruise": "depcruise --exclude \"node_modules\" --prefix \"https://github.com/blueshiftone/ngx-grid/blob/main/projects/ngx-grid-core/\" --output-type dot src/lib/ui/data-grid/data-grid.component.ts | dot -T svg > webui-dependencygraph.svg"
+  },
   "license": "MIT",
   "peerDependencies": {
-    "@angular/cdk": "^15.2.4",
-    "@angular/common": "^15.2.4",
-    "@angular/core": "^15.2.4",
-    "@angular/forms": "^15.2.4",
-    "@angular/material": "^15.2.4",
+    "@angular/cdk": "^16.0.0",
+    "@angular/common": "^16.0.1",
+    "@angular/core": "^16.0.1",
+    "@angular/forms": "^16.0.1",
+    "@angular/material": "^16.0.0",
     "prosemirror-commands": "^1.1.12",
     "prosemirror-history": "^1.2.0",
     "prosemirror-inputrules": "^1.1.3",
@@ -27,7 +30,7 @@
     "uuid": "^8.3.2"
   },
   "dependencies": {
-    "tslib": "^2.3.0"
+    "tslib": "^2.5.0"
   },
   "devDependencies": {
     "@types/prosemirror-commands": "^1.0.4",
