--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,10 +62,9 @@ jobs:
         
     - name: Copy previous package version number
       run: |
-        ls -la ./artifacts
         version=$(jq -r .version ./artifacts/package.json)
         echo $version > ./dist/ngx-grid-core/previous_package_version
-        cat ./dist/ngx-grid-core/previous_package_version
+        echo "Previous Version Was "$version
     
     - uses: actions/upload-artifact@v3
       with:
