--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,6 +1,3 @@
-# This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
-# For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
-
 name: Publish NGX Grid Core
 
 on: 
@@ -25,10 +22,14 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-          registry-url: https://registry.npmjs.org/
       - run: |
-          #cd ./artifacts
-          #npm publish --access public
-          ls -la
+          curVersion=$(jq -r .version ./package.json)
+          prevVersion=$(cat previous_package_version)
+          if [ "$curVersion" != "$prevVersion" ]; then
+            rm previous_package_version
+            npm publish --access public
+          else
+            echo "Versions didn't change. No new version to publish."
+          fi
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
