--- a/.github/workflows/build-ngx-grid-core.yml
+++ b/.github/workflows/build-ngx-grid-core.yml
@@ -1,9 +1,9 @@
 name: Build Ngx Grid Core
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - main
+#   push:
+#     branches:
+#       - main
 jobs:
   build:
     name: Build NGX Grid Core
